# maze

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  index.html  maze-3d.d.ts  maze-3d.js  maze-3d_bg.wasm.d.ts
assets/: index.html
src/: main.rs  menu.rs  resources.rs
src/game/: board.rs  mod.rs
