[package]
name = "maze-3d"
version = "0.1.0"
edition = "2021"
description = "Simple maze game using Bevu and Rapier"
repository = "https://github.com/Dalvany/maze"
keywords = ["maze", "game", "3d", "bevy", "rapier"]
categories = ["games"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release-wasm]
inherits = "release"
opt-level = 'z'
lto = "thin"

[features]
debug = ["diagnostic", "inspector", "bevy_rapier3d/debug-render-3d"]
inspector = ["dep:bevy-inspector-egui"]
diagnostic = []
js = ["maze_generator/js"]

[dependencies]
maze_generator = "2.0.1-next"
bevy = "0.11"
bevy_rapier3d = "0.22"
anyhow = "1.0"
log = "0.4"
bevy-inspector-egui = { version = "0.19", optional = true }

[patch.crates-io]
maze_generator = { git = 'https://github.com/Dalvany/maze_generator.git', branch = "wasm_support" }
